--- a/instagram/frontend/package.json
+++ b/instagram/frontend/package.json
@@ -43,6 +43,7 @@
     "react-router-redux": "^5.0.0-alpha.9",
     "reactotron-react-js": "^1.13.0",
     "redux": "^4.0.0",
+    "redux-i18n": "^1.5.13",
     "redux-thunk": "^2.2.0",
     "resolve": "1.6.0",
     "sass-loader": "^7.0.1",
