--- a/instagram/frontend/package.json
+++ b/instagram/frontend/package.json
@@ -38,6 +38,7 @@
     "react": "^16.3.2",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.2",
+    "react-facebook-login": "^4.0.1",
     "react-ionicons": "^2.1.6",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
